--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.3.3", features = ["derive"] }
 csv = "1.2.2"
 thiserror = "1.0.40"
 serde = { version = "1.0", features = ["derive"] }
+skillratings = "0.25.0"
