--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ csv = "1.2.2"
 thiserror = "1.0.40"
 serde = { version = "1.0", features = ["derive"] }
 skillratings = { version = "0.25", features = ["serde"] }
+rand = "0.8.5"
